Selec photos started

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 
 
     <div class="loginCardModule">
-        <img id="logo" src="http://localhost:8000/loader/loader3.png">
+        <!-- <img id="logo" src="http://localhost:8000/loader/loader3.png"> -->
         <h2 id="bienvenida">Inicia sesión para ver más</h2>
 
 
