--- a/src/app/album/album.component.css
+++ b/src/app/album/album.component.css
@@ -28,8 +28,18 @@
     right: 8px;
     font-size: 40px;
     cursor: pointer;
+    color: #292929
 }
 
 .photoElement i.active {
     color: #ed4956
+}
+
+.counter {
+    position: fixed;
+    background: black;
+    color: white;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
 }
