--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,9 +1,9 @@
 <div class="cardSpace">
     <div>
-        <img src="http://mitiendita.amerigas.mx/zlogo.png">
-        <h1>Mi tiendita App :(</h1>
+        <img src="{{ url.basicUrl}}images/logo/fotografiaLiliana.png">
+
         <h2>ERROR: Esta url no existe </h2>
-        <a *ngIf="checkToken()" [routerLink]="['/sale-point']">Regresar a la Aplicacion</a>
+        <a *ngIf="checkToken()" [routerLink]="['/myAlbums']">Regresar a la Aplicacion</a>
         <a *ngIf="checkToken() == false" [routerLink]="['/login']">Regresar a la Aplicacion</a>
 
     </div>
