--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="counter">
-    {{ photoLikesCount() }} / {{ album.disponible}}
+    {{ album.countSelectedPhoto() }} / {{ album.disponible}}
 </div>
 
 
@@ -22,20 +22,14 @@
 
     <div class="moreOptions">
 
-        <button id="cancelButton">
+        <button [routerLink]="['./confirm']" id="cancelButton">
             <i class="material-icons">save</i>
             <span>Guardar Selección</span>
         </button>
 
-
-        <button [routerLink]="['/inventory/search-parameters']" id="searchButton">
+        <button [routerLink]="['./selected']" id="searchButton">
             <i class="material-icons">assignment_turned_in</i>
             <span>Ver Fotos Seleccionadas</span>
-        </button>
-
-        <button [routerLink]="['/inventory/create']" id="sellButton">
-            <i class="material-icons">photo_library</i>
-            <span>Ver Todas las Fotos</span>
         </button>
 
     </div>
