--- a/src/styles.css
+++ b/src/styles.css
@@ -392,3 +392,50 @@ select {
     background-clip: content-box;
     /* background-image: -webkit-linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.4) 50%, transparent, transparent) */
 }
+
+
+/* Componentes que ocupan toda la pantalla */
+
+#createCard {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: white;
+    z-index: 10;
+    overflow-y: scroll;
+}
+
+#createCard .options {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#createCard .options mat-icon {
+    color: black;
+    cursor: pointer;
+    margin-right: 14px;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background: black;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9;
+}
+
+#cerrarBtn {
+    padding: 10px;
+    background: black;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    transition: .25s;
+}
