--- a/src/app/confirm-selected/confirm-selected.component.html
+++ b/src/app/confirm-selected/confirm-selected.component.html
@@ -11,6 +11,22 @@
 
 
     <div class="cardModule" [@card]="state.card">
+        <h3>Ha Seleccionado #{{ album.selected }} de {{ album.disponible}}</h3>
+
+        <div *ngIf="album.selected == album.disponible && album.disponible != 0">
+            <h4>¡Perfecto! ¿Desea Guardar su selección?</h4>
+            <button class="btn btnAccept">Guardar Seleccion</button>
+        </div>
+
+        <div *ngIf="album.selected > album.disponible">
+            <h4>Deseleccione algunas fotos</h4>
+            <button class="btn btnCancel" [routerLink]="['../selected']">Administrar Fotos</button>
+        </div>
+
+        <div *ngIf="album.selected < album.disponible">
+            <h4>Aun puede seleccionar mas fotos</h4>
+            <button class="btn btnAccept" [routerLink]="['../selected']">Administrar Fotos</button>
+        </div>
 
     </div>
 
