Improve on visual space

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="counter">
-    {{ album.countSelectedPhoto() }} / {{ album.disponible}}
+    <h5>{{ album.countSelectedPhoto() }} / {{ album.disponible}}</h5>
 </div>
 
 
