--- a/src/app/album/album.component.css
+++ b/src/app/album/album.component.css
@@ -37,7 +37,7 @@
 
 .counter {
     position: fixed;
-    background: black;
+    background: #000000ab;
     color: white;
     bottom: 0;
     left: 0;
