--- a/src/app/navegation/navegation.component.css
+++ b/src/app/navegation/navegation.component.css
@@ -1,12 +1,77 @@
-﻿nav {
+﻿.nav {
     position: fixed;
     height: 48px;
     width: 100%;
-    background: #3f51b5;
+    background: WHITE;
     z-index: 4;
-    color: white;
-    padding: 5px 20px;
-    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+    color: rgba(0, 0, 0, .87);
+    /* padding: 5px 20px; */
+    border-bottom: 1px solid rgba(34, 36, 38, .15);
+    box-shadow: 0 1px 2px 0 rgba(34, 36, 38, .15);
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav * {
+    font-family: "Gotham SSm A", "Gotham SSm B", Arial, Verdana, sans-serif;
+}
+
+.nav div {
+    /* padding: 0 10px 0 10px; */
+}
+
+.nav .logo img {
+    max-height: 100%;
+    padding: 5px
+}
+
+.lines p {
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.links {
+    display: flex;
+    width: fit-content;
+    cursor: pointer;
+}
+
+.links div {
+    height: 100%;
+}
+
+.lines {
+    position: relative;
+}
+
+.lines::before {
+    position: absolute;
+    content: '';
+    /* top: 0; */
+    /* right: 0; */
+    height: 100%;
+    width: 1px;
+    background: rgba(34, 36, 38, .1);
+}
+
+.lines::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 1px;
+    background: rgba(34, 36, 38, .1);
+}
+
+.nav .logo {
+    height: 100%;
+    cursor: pointer;
+}
+
+.nav a {
+    color: rgba(0, 0, 0, .87);
+    text-decoration: none;
 }
 
 nav button {
