Improve on My Albums View

--- a/src/app/navegation/navegation.component.html
+++ b/src/app/navegation/navegation.component.html
@@ -41,13 +41,13 @@
 
 </div>
 
-<div class="principal" [@space]="statePanel">
-    <div class="principalCard">
+<!-- <div class="principal" [@space]="statePanel"> -->
+<div class="principalCard">
 
-        <router-outlet></router-outlet>
-
-    </div>
+    <router-outlet></router-outlet>
 
 </div>
+
+<!-- </div> -->
 
 <app-notification></app-notification>
