--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,9 +5,10 @@
     -moz-box-shadow: 0px 0px 57px -4px rgba(0, 0, 0, 0.75);
     box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);
     background: white;
-    padding: 10px 20px 100px 20px;
+    padding: 10px 20px 60px 20px;
     z-index: 10;
     position: relative;
+    width: 300px;
 }
 
 .cardSpace {
@@ -27,8 +28,8 @@
 
 #bienvenida {
     text-align: center;
-    margin: 0;
-    font-size: 30px;
+    margin: 15px 0;
+    font-size: 25px;
     color: rgb(73, 73, 73);
 }
 
@@ -52,15 +53,15 @@ input {
 }
 
 #btnLogin:hover {
-    background: #FC2323;
+    background: #7f2061;
 }
 
 #btnLog:focus+div {
-    background: #FC2323;
+    background: #7f2061;
 }
 
 #btnLogin {
-    background: #C00000;
+    background: #7f2061;
 }
 
 #btnFacebook {
