--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,11 @@
 
 
     <div class="loginCardModule">
-        <!-- <img id="logo" src="http://localhost:8000/loader/loader3.png"> -->
-        <h2 id="bienvenida">Inicia sesión para ver más</h2>
+        <h2 id="bienvenida">INICIA SESIÓN</h2>
+        <img id="logo" src="http://www.lilianapineda.com/images/logo/rueda.png">
+        <img id="logo" src="http://www.lilianapineda.com/loader/loader3.png">
+        <br>
+
 
 
         <div id="formSpace">
@@ -15,7 +18,7 @@
                 <p class="alert" *ngIf="form.credentials == 1">Correo/Tel o Contraseña incorrectos</p>
 
 
-                <input [(ngModel)]="data.email" name="email" type="email" placeholder="Correo o Telefono" #focus><br>
+                <input [(ngModel)]="data.email" name="email" type="email" placeholder="Correo" #focus><br>
 
                 <input [(ngModel)]="data.password" name="password" type="password" placeholder="Contraseña"><br>
 
