--- a/src/app/navegation/navegation.component.css
+++ b/src/app/navegation/navegation.component.css
@@ -10,6 +10,7 @@
     box-shadow: 0 1px 2px 0 rgba(34, 36, 38, .15);
     display: flex;
     justify-content: space-around;
+    top: 0;
 }
 
 .nav * {
@@ -190,18 +191,13 @@ userTypeInf {
 /* Area de Aplicacion principal */
 
 .principalCard {
-    width: 95%;
-    margin: 0 auto;
-    margin-bottom: 85px;
-    max-width: 1600px;
+    width: 100%;
+    padding: 48px 0 100px 0;
     background: white;
     display: block;
-    min-height: 85vh;
+    min-height: 100vh;
     font-weight: 300px;
     position: relative;
-    -webkit-box-shadow: 0px 2px 31px 6px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 2px 31px 6px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 2px 31px 6px rgba(0, 0, 0, 0.19);
 }
 
 .notified {
