--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -13,7 +13,7 @@
 
 </div>
 
-<div class="counter">
+<div class="counter" [ngClass]="{ 'warning': album.countSelectedPhoto() > album.disponible , 'correct': album.countSelectedPhoto() == album.disponible }">
     <h5>{{ album.countSelectedPhoto() }} / {{ album.disponible}}</h5>
 </div>
 
