Menu for movile works

--- a/src/app/album/album.component.css
+++ b/src/app/album/album.component.css
@@ -1,6 +1,8 @@
 .photoContainer {
     display: flex;
     flex-flow: row wrap;
+    max-height: 100vh;
+    overflow-y: scroll;
 }
 
 .photoElement {
