--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,10 @@ h5 {
     margin-bottom: 5px;
 }
 
+.material-icons {
+    font-family: 'Material Icons' !important;
+}
+
 .container {
     width: 81%;
     max-width: 1100px;
