Button options finaly

--- a/src/app/album/album.component.css
+++ b/src/app/album/album.component.css
@@ -114,7 +114,8 @@
     z-index: 1;
     justify-content: space-around;
     align-content: center;
-    position: absolute
+    position: absolute;
+    margin-top: 50px;
 }
 
 .moreOptions i {
