--- a/src/app/selected-photos/selected-photos.component.html
+++ b/src/app/selected-photos/selected-photos.component.html
@@ -14,7 +14,7 @@
 
             <div *ngFor="let pho of album.photos" class="photoElement">
 
-                <div class="photo" id="selected{{ pho.id }}" [routerLink]="['show', pho.id]">
+                <div class="photo" id="selected{{ pho.id }}" [routerLink]="['../show', pho.id]">
 
                 </div>
 
