--- a/src/app/navegation/navegation.component.css
+++ b/src/app/navegation/navegation.component.css
@@ -279,7 +279,7 @@ userTypeInf {
     right: 0;
     background: #1b1c1d;
     height: 100vh;
-    width: 250px
+    width: 250px;
 }
 
 .menuPhone * {
@@ -293,10 +293,10 @@ userTypeInf {
 }
 
 .menuPhone .logoBottom {
-    width: 70%;
+    width: 50%;
     display: block;
     margin: 0 auto;
-    margin-top: 25px;
+    margin-top: 75px;
 }
 
 .menuPhone a {
