--- a/src/app/photo-view/photo-view.component.html
+++ b/src/app/photo-view/photo-view.component.html
@@ -18,9 +18,12 @@
 
 
     <img *ngIf="photo.basicPath2 !== null" src="{{ photo.basicPath2 }}" (touchmove)="doSomething($event)" (touchstart)="setInit($event)" (touchend)="decideFinal($event)" id="card" class="cardModule" [@card]="state.card">
-    <div *ngIf="photo.basicPath2 == null" (touchmove)="doSomething($event)" (touchstart)="setInit($event)" (touchend)="decideFinal($event)" id="card" class="cardModule" [@card]="state.card"></div>
+    <!-- <div *ngIf="photo.basicPath2 == null" (touchmove)="doSomething($event)" (touchstart)="setInit($event)" (touchend)="decideFinal($event)" id="card" class="cardModule" [@card]="state.card"> -->
+
+    <!-- </div> -->
 
     <nav class="likeContainer">
+
         <i class="material-icons" *ngIf="!photo.select" (click)="likePhoto()">favorite_border</i>
         <i class="material-icons active" *ngIf="photo.select" (click)="likePhoto()">favorite</i>
     </nav>
