--- a/src/app/navegation/navegation.component.html
+++ b/src/app/navegation/navegation.component.html
@@ -5,7 +5,9 @@
 <nav class="nav bodyMove" id="bodyMove1">
 
     <div class="logo lines">
-        <img src="http://www.lilianapineda.com/images/logo/header.png">
+        <a href="{{url.basicUrl}}">
+            <img src="http://www.lilianapineda.com/images/logo/header.png">
+        </a>
     </div>
 
     <div class="links">
