--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,10 @@
 
     <div class="loginCardModule">
         <h2 id="bienvenida">INICIA SESIÓN</h2>
-        <img id="logo" src="http://www.lilianapineda.com/images/logo/rueda.png">
-        <img id="logo" src="http://www.lilianapineda.com/loader/loader3.png">
+        <a href="{{ url.basicUrl }}">
+            <img id="logo" src="http://www.lilianapineda.com/images/logo/rueda.png">
+            <img id="logo" src="http://www.lilianapineda.com/loader/loader3.png">
+        </a>
         <br>
 
 
